--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="delete_pokemon_message">Are you sure you want to delete this pokemon?</string>
     <string name="pokemon_removed">Pokemon removed!</string>
     <string name="pokemon_updated">Pokemon updated!</string>
+    <string name="pokemon_not_found">Pokemon not found!</string>
+    <string name="pikachu">Pikachu</string>
+    <string name="loading">Loading</string>
+    <string name="loading_msg">Wiping down your PokeDex...</string>
 </resources>
